--- a/manifest.json
+++ b/manifest.json
@@ -1,33 +1,24 @@
 {
-  "name": "Housezen Admin - Gestión de Propiedades",
-  "short_name": "Housezen Admin",
-  "description": "Gestión Profesional de Propiedades y Seguimiento de Incidencias",
-  "start_url": "./",
-  "scope": "./",
+  "name": "CaseroZen Admin",
+  "short_name": "CaseroZen",
+  "description": "Gestión Profesional de Propiedades",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#F8FAFC",
   "theme_color": "#14B8A6",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%2314B8A6'/%3E%3Ctext x='50' y='70' text-anchor='middle' font-size='60' fill='white'%3E🏢%3C/text%3E%3C/svg%3E",
+      "src": "https://cdn-icons-png.flaticon.com/512/609/609803.png",
       "sizes": "192x192",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%2314B8A6'/%3E%3Ctext x='50' y='70' text-anchor='middle' font-size='60' fill='white'%3E🏢%3C/text%3E%3C/svg%3E",
+      "src": "https://cdn-icons-png.flaticon.com/512/609/609803.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any"
-    },
-    {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%2314B8A6'/%3E%3Ctext x='50' y='70' text-anchor='middle' font-size='60' fill='white'%3E🏢%3C/text%3E%3C/svg%3E",
-      "sizes": "192x192",
-      "type": "image/svg+xml",
-      "purpose": "maskable"
     }
-  ],
-  "categories": ["business", "productivity"],
-  "prefer_related_applications": false
+  ]
 }
