subida forzada desde terminal

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "CaseroZen Admin",
-  "short_name": "CaseroZen",
+  "name": "Casero Zen",
+  "short_name": "Casero Zen",
   "description": "Gestión Profesional de Propiedades",
   "start_url": "index.html",
   "display": "standalone",
