--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,28 @@
 {
-  "name": "Casero Zen",
+  "name": "Casero Zen - Gestión de Propiedades",
   "short_name": "Casero Zen",
-  "description": "Gestión Profesional de Propiedades",
-  "start_url": "index.html",
+  "description": "Gestión Profesional de Propiedades para Caseros",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#F8FAFC",
   "theme_color": "#14B8A6",
   "orientation": "portrait-primary",
+  "categories": ["business", "productivity"],
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/609/609802.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/609/609803.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "screenshots": [],
+  "prefer_related_applications": false
 }
