--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "Casero Zen - Gestión de Propiedades",
   "short_name": "Casero Zen",
   "description": "Gestión Profesional de Propiedades para Caseros",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#F8FAFC",
   "theme_color": "#14B8A6",
